<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llHomeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tvHomeHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/home"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_25ssp"
                    android:textStyle="bold"/>
                <ImageView
                    android:id="@+id/ivSearchIcon"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_search"
                    app:tint="@color/light_accent"
                    android:contentDescription="@string/search_icon"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvHomeTitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/what_would_you_like_to_eat"
                android:textColor="@color/light_accent"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/llHomeHeader"
                app:layout_constraintStart_toStartOf="@id/llHomeHeader"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvRandomMeal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp"
                app:strokeWidth="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHomeTitle1">
                <ImageView
                    android:id="@+id/ivImageRandomMeal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/accent"
                    android:src="@drawable/img_meal_placeholder"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/random_meal_image" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvHomeTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/over_popular_meals"
                android:textColor="@color/light_accent"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cvRandomMeal"
                app:layout_constraintStart_toStartOf="@id/cvRandomMeal"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularMeals"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:listitem="@layout/layout_popular_meal_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHomeTitle2"/>

            <TextView
                android:id="@+id/tvHomeTitle02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/your_recipes"
                android:textColor="@color/light_accent"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/rvPopularMeals"
                app:layout_constraintStart_toStartOf="@id/rvPopularMeals"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecipe"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:listitem="@layout/layout_popular_meal_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHomeTitle02"/>

            <TextView
                android:id="@+id/tvHomeTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/categories"
                android:textColor="@color/light_accent"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/rvRecipe"
                app:layout_constraintStart_toStartOf="@id/rvRecipe"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/off_white"
                app:cardElevation="0dp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:strokeWidth="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHomeTitle3"
                app:layout_constraintBottom_toBottomOf="parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    tools:listitem="@layout/layout_category_item" />
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>