<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".activities.MealActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablMeal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:backgroundTint="@color/secondary_accent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ctlMeal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/accent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Meal Name">

            <ImageView
                android:id="@+id/ivMeal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/meal_image"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbMeal"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddToFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/floating_action_button"
        android:src="@drawable/ic_favorite"
        app:backgroundTint="@color/accent"
        app:tint="@color/white"
        app:layout_anchor="@id/ablMeal"
        app:layout_anchorGravity="bottom|end"
        style="@style/Widget.MaterialComponents.FloatingActionButton"/>
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/llMealCategoryAndArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/tvMealCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/dark_accent"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_category"
                    app:drawableTint="@color/dark_accent" />
                <TextView
                    android:id="@+id/tvMealArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/area"
                    android:textColor="@color/dark_accent"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_area"
                    app:drawableTint="@color/dark_accent" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvMealInstructionsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/dark_accent"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llMealCategoryAndArea"/>
            <TextView
                android:id="@+id/tvMealInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/light_accent"
                android:textStyle="normal"
                android:text="@string/instructions"
                android:justificationMode="inter_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMealInstructionsTitle"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

<!--    <ImageView-->
<!--        android:id="@+id/ivYoutubeIcon"-->
<!--        android:layout_width="@dimen/_64sdp"-->
<!--        android:layout_height="@dimen/_64sdp"-->
<!--        android:layout_gravity="bottom|center"-->
<!--        android:layout_marginBottom="@dimen/_10sdp"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:src="@drawable/img_youtube"-->
<!--        android:contentDescription="@string/youtube_icon_image"/>-->

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:trackColor="@color/off_white"
        app:indicatorColor="@color/accent"
        app:layout_anchor="@id/ablMeal"
        app:layout_anchorGravity="bottom"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>